# videos

./: .gitignore  pyproject.toml
1402/1_maslow/: part1_international.ipynb  part2_iran.ipynb
1402/1_maslow/data/: plot_1.csv  plot_2.csv  plot_3.csv
utils/: __init__.py
